--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,14 @@
-.App {
-  text-align: center;
+.h1{
+  font-size: 300%;
+  padding-left:200px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.p{
+  font-size:100%;
+
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.h3{
+  font-size:90%;
+  padding-left: 400px;
 }
